# rokey_week5_ws

./: README.md  world
src/car_tutorial/: package.xml  setup.py
src/car_tutorial/car_tutorial/: fake_driver.py
src/car_tutorial/config/: car.rviz
src/car_tutorial/launch/: fake.launch.py
src/testbot_description/: package.xml  setup.cfg  setup.py
src/urdf_tutorial/: package.xml  setup.py
src/urdf_tutorial/config/: robot_1.rviz
src/urdf_tutorial/launch/: robot_1.launch.py  robot_2.launch.temp.py
src/urdf_tutorial/urdf/: robot_1.xacro
src/urdf_tutorial/urdf_tutorial/: Robot_status.py  control_center.py  sytsten.py  sytsten_gui.py
src/week5_map/: package.xml  setup.cfg  setup.py
src/week5_map/map/: map.pgm  map.yaml
src/week5_map/week5_map/: new.py  system_gui.py  temp.py
src/week5_model/: package.xml  setup.cfg  setup.py  urdf.tar.xz
src/week5_model/config/: hose_robot.rviz
src/week5_model/launch/: display_hose.launch.py  plate.launch.py
src/week5_model/mesh/hose/: Base(E).stl  Base2.stl  Top(I).stl  Top2.stl
src/week5_model/sdf/: hose_robot.sdf  model.sdf
src/week5_model/urdf/: hose_plate.urdf.xacro  hose_robot.urdf  hose_robot.urdf.xacro  hose_robot2.urdf.xacro  hose_robot_tenp.urdf.xacro  temp.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
src/week5_model/week5_model/: joint_command_node.py  joint_state_publisher.py
src/week5_model/worlds/: 241205_2.world  trash.world
